test/fails/functionUndefined3.imp
fun main()
vars confusion
{       
	confusion = confusion();
	return confusion;
}
